--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.22.7",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@sendgrid/mail": "^8.1.3",
     "classnames": "^2.5.1",
+    "contentful": "^10.12.13",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
