--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "contentful": "^10.12.13",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5"
   },
   "devDependencies": {
     "@types/node": "^20",
