--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-fast-marquee": "^1.6.5"
+    "react-fast-marquee": "^1.6.5",
+    "react-outside-click-handler": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
