--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-outside-click-handler": "^1.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "sass": "^1.77.8",
