--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.22.7",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@mui/material": "^5.16.5",
     "@sendgrid/mail": "^8.1.3",
     "classnames": "^2.5.1",
     "contentful": "^10.12.13",
