--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@mui/material": "^5.16.5",
     "@sendgrid/mail": "^8.1.3",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "contentful": "^10.12.13",
     "next": "14.2.5",
