--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@mui/material": "^5.16.5",
     "@sendgrid/mail": "^8.1.3",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.7.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "contentful": "^10.12.13",
